--- a/src/_locales/es/messages.json
+++ b/src/_locales/es/messages.json
@@ -904,7 +904,7 @@
     "description": "Text for button which open an external webpage in Support pane"
   },
   "supportFindSpecificButton": {
-    "message": "Encontrar reportes similares",
+    "message": "Buscar reportes similares",
     "description": "A clickable link in the filter issue reporter section"
   },
   "supportS1H": {
