--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -900,11 +900,11 @@
     "description": "Text for button which open an external webpage in Support pane"
   },
   "supportReportSpecificButton": {
-    "message": "Создать новый отчет",
+    "message": "Создать новый отчёт",
     "description": "Text for button which open an external webpage in Support pane"
   },
   "supportFindSpecificButton": {
-    "message": "Найти похожие отчеты",
+    "message": "Найти похожие отчёты",
     "description": "A clickable link in the filter issue reporter section"
   },
   "supportS1H": {
@@ -964,7 +964,7 @@
     "description": "Header of 'Report a filter issue' section in Support pane"
   },
   "supportS6P1S1": {
-    "message": "Чтобы не обременять волонтеров дублированными отчетами, пожалуйста, убедитесь, что о данной проблеме еще не сообщали",
+    "message": "Чтобы не обременять добровольцев дублированными отчётами, пожалуйста, убедитесь, что о данной проблеме еще не сообщали.",
     "description": "A paragraph in the filter issue reporter section"
   },
   "supportS6P2S1": {
