--- a/src/_locales/tr/messages.json
+++ b/src/_locales/tr/messages.json
@@ -904,7 +904,7 @@
     "description": "Text for button which open an external webpage in Support pane"
   },
   "supportFindSpecificButton": {
-    "message": "Benzer raporları bul",
+    "message": "Benzer raporlar bul",
     "description": "A clickable link in the filter issue reporter section"
   },
   "supportS1H": {
