--- a/platform/mv3/extension/_locales/it/messages.json
+++ b/platform/mv3/extension/_locales/it/messages.json
@@ -112,7 +112,7 @@
     "description": "First paragraph of 'Filter issues' section in Support pane"
   },
   "supportS6P1S1": {
-    "message": "Per evitare di gravare sui volontari con doppie segnalazioni, verificate che il problema non sia già stato segnalato. <b>Nota:</b> facendo clic sul pulsante, l'origine della pagina verrà inviata a GitHub.",
+    "message": "Per evitare di gravare sui volontari con segnalazioni duplicate, verifica che il problema non sia già stato segnalato. <b>Nota:</b> cliccando il pulsante l'origine della pagina sarà inviata a GitHub.",
     "description": "A paragraph in the filter issue reporter section"
   },
   "supportFindSpecificButton": {
