--- a/src/_locales/hr/messages.json
+++ b/src/_locales/hr/messages.json
@@ -900,11 +900,11 @@
     "description": "Text for button which open an external webpage in Support pane"
   },
   "supportReportSpecificButton": {
-    "message": "Napravi novu prijavu",
+    "message": "Napravi novu prijavu na GitHub-u",
     "description": "Text for button which open an external webpage in Support pane"
   },
   "supportFindSpecificButton": {
-    "message": "Nađi slične prijave",
+    "message": "Nađi slične prijave na GitHub-u",
     "description": "A clickable link in the filter issue reporter section"
   },
   "supportS1H": {
