--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -900,11 +900,11 @@
     "description": "Text for button which open an external webpage in Support pane"
   },
   "supportReportSpecificButton": {
-    "message": "Создать новый отчёт",
+    "message": "Создать новый отчёт в GitHub",
     "description": "Text for button which open an external webpage in Support pane"
   },
   "supportFindSpecificButton": {
-    "message": "Найти похожие отчёты",
+    "message": "Найти похожие отчёты в GitHub",
     "description": "A clickable link in the filter issue reporter section"
   },
   "supportS1H": {
@@ -964,7 +964,7 @@
     "description": "Header of 'Report a filter issue' section in Support pane"
   },
   "supportS6P1S1": {
-    "message": "Чтобы не обременять добровольцев дублированными отчётами, пожалуйста, убедитесь, что о данной проблеме еще не сообщали.",
+    "message": "Чтобы не обременять добровольцев повторяющимися отчётами, пожалуйста, убедитесь, что об этой проблеме ещё не сообщали. <b>Примечание:</b> щелчок по кнопке приведёт к отправке исходного текста страницы в GitHub.",
     "description": "A paragraph in the filter issue reporter section"
   },
   "supportS6P2S1": {
