--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -964,7 +964,7 @@
     "description": "Header of 'Report a filter issue' section in Support pane"
   },
   "supportS6P1S1": {
-    "message": "Чтобы не обременять добровольцев повторяющимися отчётами, пожалуйста, убедитесь, что об этой проблеме ещё не сообщали. <b>Примечание:</b> щелчок по кнопке приведёт к отправке исходного текста страницы в GitHub.",
+    "message": "Чтобы не обременять добровольцев повторяющимися отчётами, пожалуйста, убедитесь, что об этой проблеме ещё не сообщали. <b>Примечание:</b> щелчок по кнопке приведёт к отправке адреса посещенной страницы GitHub'у.",
     "description": "A paragraph in the filter issue reporter section"
   },
   "supportS6P2S1": {
